--- a/package.json
+++ b/package.json
@@ -26,17 +26,16 @@
     "typescript": "^5.4.5"
   },
   "devDependencies": {
-    "@typescript-eslint/parser": "^7.13.1",
     "astro-icon": "^1.1.0",
     "autoprefixer": "^10.4.19",
     "eslint": "^9.5.0",
     "eslint-plugin-astro": "^1.2.2",
-    "eslint-plugin-jsx-a11y": "^6.9.0",
     "prettier": "^3.3.2",
     "prettier-plugin-astro": "^0.14.0",
     "prettier-plugin-packagejson": "^2.4.3",
     "sass": "^1.77.6"
   },
+  "packageManager": "pnpm@6.32.4",
   "volta": {
     "node": "22.3.0"
   }
