--- a/.github/workflows/astro.yml
+++ b/.github/workflows/astro.yml
@@ -24,8 +24,8 @@ jobs:
         uses: withastro/action@v2
         with:
           node-version: 22.3.0 # The specific version of Node that should be used to build your site. Defaults to 20. (optional)
+          package-manager: pnpm@latest # The Node package manager that should be used to install dependencies and build your site. Automatically detected based on your lockfile. (optional)
         # path: . # The root location of your Astro project inside the repository. (optional)
-        # package-manager: pnpm@latest # The Node package manager that should be used to install dependencies and build your site. Automatically detected based on your lockfile. (optional)
 
   deploy:
     needs: build
