--- a/.github/workflows/deployment_dev.yml
+++ b/.github/workflows/deployment_dev.yml
@@ -5,7 +5,6 @@ on:
     branches: [ develop ]
 
 env:
-  REGISTRY: registry.fxsr.de
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
@@ -32,7 +31,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+          tags: ${{ env.IMAGE_NAME }}:latest
 
       - name: Log out from registry
         run: docker logout ${{ secrets.REGISTRY_URL }}
