--- a/.github/workflows/deployment_dev.yml
+++ b/.github/workflows/deployment_dev.yml
@@ -19,19 +19,22 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Log in to registry
+      - name: 'Login to fxsr Container Registry'
+        uses: docker/login-action@v3
         env:
+          REGISTRY_URL: https://registry.fxsr.de/
           REGISTRY_PASSWORD: ${{ secrets.REGISTRY_PASSWORD }}
           REGISTRY_USERNAME: ${{ secrets.REGISTRY_USERNAME }}
-          REGISTRY_URL: https://registry.fxsr.de/
-        run: echo "$REGISTRY_PASSWORD" | docker login $REGISTRY_URL -u $REGISTRY_USERNAME --password-stdin
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v6
         with:
-          context: .
+          registry: $REGISTRY_URL
+          username: $REGISTRY_USERNAME
+          password: $REGISTRY_PASSWORD
+
+      - name: Build and push
+        uses: docker/build-push-action@v4
+        with:
           push: true
-          tags: ${{ env.IMAGE_NAME }}:latest
+          tags: eckwerkstuttgart/example_docker:latest
 
       - name: Log out from registry
         run: docker logout ${{ secrets.REGISTRY_URL }}
