--- a/.github/workflows/deployment_dev.yml
+++ b/.github/workflows/deployment_dev.yml
@@ -19,18 +19,10 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: 'Login to fxsr Container Registry'
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ secrets.REGISTRY_URL }}
-          username: ${{ secrets.REGISTRY_USERNAME }}
-          password: ${{ secrets.REGISTRY_PASSWORD }}
+      - name: 'Login to fxsr docker registry'
+        run: echo  | docker login ${{ secrets.REGISTRY_URL }} -u ${{ secrets.REGISTRY_USERNAME }} --password-stdin
 
-      - name: Build and push
-        uses: docker/build-push-action@v4
-        with:
-          push: true
-          tags: eckwerkstuttgart/example_docker:latest
-
-      - name: Log out from registry
-        run: docker logout ${{ secrets.REGISTRY_URL }}
+      - name: 'Build Image'
+        run: |
+          docker build . --tag eckwerrkstuttgart:latest
+          docker push eckwerrkstuttgart:latest
