--- a/.github/workflows/deployment_dev.yml
+++ b/.github/workflows/deployment_dev.yml
@@ -4,9 +4,6 @@ on:
   push:
     branches: [ develop ]
 
-env:
-  IMAGE_NAME: ${{ github.repository }}
-
 jobs:
   build:
     name: Build and Push Docker Image
@@ -19,10 +16,10 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: 'Login to fxsr docker registry'
-        run: echo  | docker login ${{ secrets.REGISTRY_URL }} -u ${{ secrets.REGISTRY_USERNAME }} --password-stdin
+      - name: 'Login to fxsr Container Registry'
+        run: echo ${{ secrets.REGISTRY_PASSWORD }} | docker login ${{ secrets.REGISTRY_URL }} -u ${{ secrets.REGISTRY_USERNAME }} --password-stdin
 
-      - name: 'Build Image'
+      - name: 'Build Inventory Image'
         run: |
           docker build . --tag eckwerrkstuttgart:latest
           docker push eckwerrkstuttgart:latest
