--- a/.github/workflows/deployment_dev.yml
+++ b/.github/workflows/deployment_dev.yml
@@ -18,8 +18,7 @@ jobs:
 
       - name: 'Login to fxsr Container Registry'
         run: echo ${{ secrets.REGISTRY_PASSWORD }} | docker login ${{ secrets.REGISTRY_URL }} -u ${{ secrets.REGISTRY_USERNAME }} --password-stdin
-
       - name: 'Build Inventory Image'
         run: |
-          docker build . --tag eckwerrkstuttgart:latest
-          docker push eckwerrkstuttgart:latest
+          docker build . --tag eckwerkstuttgart:latest
+          docker push eckwerkstuttgart:latest
