--- a/.github/workflows/deployment_dev.yml
+++ b/.github/workflows/deployment_dev.yml
@@ -21,5 +21,5 @@ jobs:
 
       - name: 'Build Inventory Image'
         run: |
-          docker build . --tag eckwerkstuttgart:latest
+          docker build . --tag registry.fxsr.de/felixsauer/eckwerkstuttgart:latest
           docker push eckwerkstuttgart:latest
