--- a/.github/workflows/deployment_dev.yml
+++ b/.github/workflows/deployment_dev.yml
@@ -16,10 +16,16 @@ jobs:
       - name: 'Login to fxsr Container Registry'
         run: echo ${{ secrets.REGISTRY_PASSWORD }} | docker login ${{ secrets.REGISTRY_URL }} -u ${{ secrets.REGISTRY_USERNAME }} --password-stdin
 
+      - name: Extract version from package.json
+        id: get_version
+        run: |
+          VERSION=$(jq -r '.version' package.json)
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
       - name: 'Build Inventory Image'
         run: |
-          docker build . --tag registry.fxsr.de/felixsauer/eckwerkstuttgart:latest
-          docker push eckwerkstuttgart:latest
+          docker build . --tag registry.fxsr.de/felixsauer/eckwerkstuttgart:${{ env.VERSION }}
+          docker push registry.fxsr.de/felixsauer/eckwerkstuttgart:${{ env.VERSION }}
