--- a/.github/workflows/deployment_dev.yml
+++ b/.github/workflows/deployment_dev.yml
@@ -36,5 +36,5 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: ls
-        run: ls
+      - name: Show content of needs context
+        run: echo "${{ needs.build.outputs }}"
