Modify workflow dev

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 services:
   fxsrEckwerkDev:
-    image: registry.fxsr.de/eckwerk:latest
-    container_name: fxsrEckwerkDev
+    image: registry.fxsr.de/eckwerkstuttgart/eckwerkstuttgart:latest
+    container_name: fxsrEckwerkStuttgartDev
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.fxsrDockerRegistry.rule=Host(`eckwerk-dev.fxsr.de`)"
+      - "traefik.http.routers.fxsrDockerRegistry.rule=Host(`eckwer-dev.fxsr.de`)"
       - "traefik.http.routers.fxsrDockerRegistry.entrypoints=websec"
       - "traefik.http.routers.fxsrDockerRegistry.tls=true"
       - "traefik.http.routers.fxsrDockerRegistry.tls.certresolver=production"
