--- a/.github/workflows/deployment_dev.yml
+++ b/.github/workflows/deployment_dev.yml
@@ -21,20 +21,30 @@ jobs:
         run: |
           VERSION=$(jq -r '.version' package.json)
           echo "VERSION=$VERSION" >> $GITHUB_ENV
+          echo "IMAGE_TAG=$VERSION" >> $GITHUB_ENV
+          echo "DOCKER_IMAGE_URI=registry.fxsr.de/eckwerkstuttgart/eckwerkstuttgart" >> $GITHUB_ENV
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
       - name: 'Build Inventory Image'
         run: |
-          docker build . --tag registry.fxsr.de/eckwerkstuttgart/eckwerkstuttgart:${{ env.VERSION }}
-          docker push registry.fxsr.de/eckwerkstuttgart/eckwerkstuttgart:${{ env.VERSION }}
+          docker build . --tag ${{ env.DOCKER_IMAGE_URI }}:${{ env.IMAGE_TAG }}
+          docker push ${{ env.DOCKER_IMAGE_URI }}:${{ env.IMAGE_TAG }}
 
   deploy:
-    name: Deploy on fxsr Portainer
+    name: Deploy stack to Portainer
     needs: build
     runs-on: ubuntu-latest
 
     steps:
-      - name: Show content of needs context
-        run: echo "${{ needs.build.outputs }}"
+      - name: Deploy stack to Portainer
+        uses: carlrygart/portainer-stack-deploy@v1
+        with:
+          portainer-host: ${{ secrets.PORTAINER_HOST }}
+          username: ${{ secrets.PORTAINER_USERNAME }}
+          password: ${{ secrets.PORTAINER_PASSWORD }}
+          stack-name: 'eckwerkstuttgart'
+          stack-definition: 'docker-compose.yml'
+          image: ${{ env.DOCKER_IMAGE_URI }}:${{ env.IMAGE_TAG }}
+          pull-image: true
