--- a/.github/workflows/deployment_dev.yml
+++ b/.github/workflows/deployment_dev.yml
@@ -5,8 +5,8 @@ on:
     branches: [ develop ]
 
 jobs:
-  build:
-    name: Build and Push Docker Image
+  preparation:
+    name: Prepare
     runs-on: ubuntu-latest
 
     steps:
@@ -24,6 +24,11 @@ jobs:
           echo "IMAGE_TAG=$VERSION" >> $GITHUB_ENV
           echo "DOCKER_IMAGE_URI=registry.fxsr.de/eckwerkstuttgart/eckwerkstuttgart" >> $GITHUB_ENV
 
+  build:
+    name: Build and Push Docker Image
+    runs-on: ubuntu-latest
+
+    steps:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -38,13 +43,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Deploy stack to Portainer
-        uses: carlrygart/portainer-stack-deploy@v1
+      - name: Deploy Stack
+        uses: kgierke/portainer-stack-deployment@v1
         with:
-          portainer-host: ${{ secrets.PORTAINER_HOST }}
-          username: ${{ secrets.PORTAINER_USERNAME }}
-          password: ${{ secrets.PORTAINER_PASSWORD }}
-          stack-name: 'eckwerkstuttgart'
-          stack-definition: 'docker-compose.yml'
-          image: ${{ env.DOCKER_IMAGE_URI }}:${{ env.IMAGE_TAG }}
-          pull-image: true
+          portainer-url: "https://portainer.example.com"
+          portainer-username: ${{ secrets.PORTAINER_USERNAME }}
+          portainer-password: ${{ secrets.PORTAINER_PASSWORD }}
+          portainer-endpoint: 2
+          name: eckwerkstuttgart
+          file: docker-compose.yml
+          variables: |
+            {
+              "image": "${{ env.DOCKER_IMAGE_URI }}:${{ env.IMAGE_TAG }}"
+            }
