--- a/.github/workflows/deployment_dev.yml
+++ b/.github/workflows/deployment_dev.yml
@@ -27,6 +27,7 @@ jobs:
   build:
     name: Build and Push Docker Image
     runs-on: ubuntu-latest
+    needs: preparation
 
     steps:
       - name: Set up Docker Buildx
