--- a/.github/workflows/deployment_dev.yml
+++ b/.github/workflows/deployment_dev.yml
@@ -35,8 +35,8 @@ jobs:
 
       - name: 'Build Inventory Image'
         run: |
-          docker build . --tag ${{ env.DOCKER_IMAGE_URI }}:${{ env.IMAGE_TAG }}
-          docker push ${{ env.DOCKER_IMAGE_URI }}:${{ env.IMAGE_TAG }}
+          docker build . --tag registry.fxsr.de/eckwerkstuttgart/eckwerkstuttgart:${{ env.IMAGE_TAG }}
+          docker push registry.fxsr.de/eckwerkstuttgart/eckwerkstuttgart:${{ env.IMAGE_TAG }}
 
   deploy:
     name: Deploy stack to Portainer
@@ -53,7 +53,3 @@ jobs:
           portainer-endpoint: 2
           name: eckwerkstuttgart
           file: docker-compose.yml
-          variables: |
-            {
-              "image": "${{ env.DOCKER_IMAGE_URI }}:${{ env.IMAGE_TAG }}"
-            }
