--- a/.github/workflows/deployment_dev.yml
+++ b/.github/workflows/deployment_dev.yml
@@ -5,8 +5,8 @@ on:
     branches: [ develop ]
 
 jobs:
-  preparation:
-    name: Prepare
+  build:
+    name: Build and Push Docker Image
     runs-on: ubuntu-latest
 
     steps:
@@ -21,25 +21,17 @@ jobs:
         run: |
           VERSION=$(jq -r '.version' package.json)
           echo "VERSION=$VERSION" >> $GITHUB_ENV
-          echo "IMAGE_TAG=$VERSION" >> $GITHUB_ENV
-          echo "DOCKER_IMAGE_URI=registry.fxsr.de/eckwerkstuttgart/eckwerkstuttgart" >> $GITHUB_ENV
 
-  build:
-    name: Build and Push Docker Image
-    runs-on: ubuntu-latest
-    needs: preparation
-
-    steps:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
       - name: 'Build Inventory Image'
         run: |
-          docker build . --tag registry.fxsr.de/eckwerkstuttgart/eckwerkstuttgart:${{ env.IMAGE_TAG }}
-          docker push registry.fxsr.de/eckwerkstuttgart/eckwerkstuttgart:${{ env.IMAGE_TAG }}
+          docker build . --tag registry.fxsr.de/eckwerkstuttgart/eckwerkstuttgart:${{ env.VERSION }}
+          docker push registry.fxsr.de/eckwerkstuttgart/eckwerkstuttgart:${{ env.VERSION }}
 
   deploy:
-    name: Deploy stack to Portainer
+    name: Deploy on Portainer
     needs: build
     runs-on: ubuntu-latest
 
@@ -47,9 +39,9 @@ jobs:
       - name: Deploy Stack
         uses: kgierke/portainer-stack-deployment@v1
         with:
-          portainer-url: "https://portainer.example.com"
+          portainer-url: ${{ secrets.PORTAINER_URL }}
           portainer-username: ${{ secrets.PORTAINER_USERNAME }}
           portainer-password: ${{ secrets.PORTAINER_PASSWORD }}
-          portainer-endpoint: 2
+          portainer-endpoint: 1
           name: eckwerkstuttgart
           file: docker-compose.yml
