--- a/.github/workflows/deployment_dev.yml
+++ b/.github/workflows/deployment_dev.yml
@@ -36,6 +36,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Curl
+        run:  curl https://portainer.fxsr.de
       - name: Deploy Stack
         uses: kgierke/portainer-stack-deployment@v1
         with:
