--- a/.github/workflows/deployment_dev.yml
+++ b/.github/workflows/deployment_dev.yml
@@ -13,9 +13,6 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Test
-        run: ls -la
-
       - name: 'Login to fxsr Container Registry'
         run: echo ${{ secrets.REGISTRY_PASSWORD }} | docker login ${{ secrets.REGISTRY_URL }} -u ${{ secrets.REGISTRY_USERNAME }} --password-stdin
 
@@ -28,10 +25,18 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: 'Build Inventory Image'
+      - name: Build Inventory Image
         run: |
           docker build . --tag registry.fxsr.de/eckwerkstuttgart/eckwerkstuttgart:${{ env.VERSION }}
           docker push registry.fxsr.de/eckwerkstuttgart/eckwerkstuttgart:${{ env.VERSION }}
+
+      - name: Cache docker-compose.yml
+        uses: actions/cache@v3
+        with:
+          path: docker-compose.yml
+          key: ${{ runner.os }}-docker-compose-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-docker-compose-
 
   deploy:
     name: Deploy on Portainer
@@ -39,8 +44,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Curl
-        run: ls -la
+      - name: Restore docker-compose.yml from cache
+        uses: actions/cache@v3
+        with:
+          path: docker-compose.yml
+          key: ${{ runner.os }}-docker-compose-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-docker-compose-
+
+      - name: Verify docker-compose.yml
+        run: ls -la docker-compose.yml
+
       - name: Deploy Stack
         uses: kgierke/portainer-stack-deployment@v1
         with:
