--- a/.github/workflows/deployment_dev.yml
+++ b/.github/workflows/deployment_dev.yml
@@ -30,12 +30,28 @@ jobs:
           docker build . --tag fxsrdocker/eckwerkstuttgart:${{ env.VERSION }}
           docker push fxsrdocker/eckwerkstuttgart:${{ env.VERSION }}
 
+      - name: Cache docker-compose.yml
+        uses: actions/cache@v3
+        with:
+          path: docker-compose.yml
+          key: ${{ runner.os }}-docker-compose-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-docker-compose-
+
   deploy:
     name: Deploy on Portainer
     needs: build
     runs-on: ubuntu-latest
 
     steps:
+      - name: Restore docker-compose.yml from cache
+        uses: actions/cache@v3
+        with:
+          path: docker-compose.yml
+          key: ${{ runner.os }}-docker-compose-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-docker-compose-
+
       - name: Deploy on fxsr server portainer
         uses: nevcodia/portainer-stack-deployment@v2.19.3
         with:
