--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,11 +4,10 @@ services:
     container_name: fxsrEckwerkStuttgartDev
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.fxsrDockerRegistry.rule=Host(`eckwerk-dev`)"
-      - "traefik.http.routers.fxsrDockerRegistry.entrypoints=https"
-      - "traefik.http.routers.fxsrDockerRegistry.tls=https"
-      - "traefik.http.services.fxsrDockerRegistry.loadbalancer.server.port=4321"
-      - "traefik.http.services.fxsrDockerRegistry.loadbalancer.server.scheme=https"
+      - "traefik.http.routers.eckwerkstuttgart.rule=Host(`eckwerk-dev`)"
+      - "traefik.http.routers.eckwerkstuttgart.entrypoints=https"
+      - "traefik.http.routers.eckwerkstuttgart.tls=https"
+      - "traefik.http.services.eckwerkstuttgart.loadbalancer.server.port=4321"
     ports:
       - 4321:4321
     restart: unless-stopped
