--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - "traefik.http.routers.eckwerkstuttgart.entrypoints=https"
       - "traefik.http.routers.eckwerkstuttgart.tls=true"
       - "traefik.http.services.eckwerkstuttgart.loadbalancer.server.port=8083"
+      - "traefik.http.services.eckwerkstuttgart.loadbalancer.server.scheme=http"
     ports:
       - 8083:80
     restart: unless-stopped
