--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,7 @@ services:
       - "traefik.http.routers.eckwerkstuttgart.rule=Host(`eckwerk-dev.fxsr.de`)"
       - "traefik.http.routers.eckwerkstuttgart.entrypoints=https"
       - "traefik.http.routers.eckwerkstuttgart.tls=true"
-      - "traefik.http.services.eckwerkstuttgart.loadbalancer.server.port=8083"
-    ports:
-      - 8083:80
+      - "traefik.http.services.eckwerkstuttgart.loadbalancer.server.scheme=http"
     restart: unless-stopped
     networks:
       - traefik
