--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,14 +4,18 @@ services:
     container_name: fxsrEckwerkStuttgartDev
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.eckwerk.entryPoints=websecure"
+      - "traefik.http.routers.eckwerk.entryPoints=https"
       - "traefik.http.routers.eckwerk.rule=Host(`eckwerk-dev.fxsr.de`)"
       - "traefik.http.routers.eckwerk.tls=true"
       - "traefik.http.routers.eckwerk.tls.certresolver=staging"
       - "traefik.http.services.eckwerk.loadbalancer.server.port=8083"
-      - "traefik.http.services.eckwerk.loadbalancer.server.scheme=websecure"
+      - "traefik.http.services.eckwerk.loadbalancer.server.scheme=https"
     ports:
       - "8083:80"
     restart: unless-stopped
     networks:
       - traefik-net
+
+networks:
+  traefik-net:
+    external: true
