--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "astro-favicons": "^2.0.2",
     "astro-icon": "^1.1.0",
     "astro-robots-txt": "^1.0.0",
+    "astro-image": "^0.0.7",
     "astro-seo": "^0.8.4",
     "typescript": "^5.5.3"
   },
