--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eckwerkstuttgart",
   "type": "module",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -31,6 +31,7 @@
     "astro-seo": "^0.8.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-grid-gallery": "^1.0.1",
     "react-native-awesome-gallery": "^0.4.2",
     "typescript": "^5.5.3"
   },
