--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eckwerkstuttgart",
   "type": "module",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -13,6 +13,7 @@
   "dependencies": {
     "@astrojs/check": "^0.7.0",
     "@astrojs/react": "^3.6.2",
+    "@astrojs/tailwind": "^5.1.1",
     "@fontsource-variable/fira-code": "^5.0.18",
     "@fontsource-variable/material-symbols-outlined": "^5.0.33",
     "@fontsource-variable/montserrat": "^5.0.19",
@@ -34,6 +35,7 @@
     "react-dom": "^18.3.1",
     "react-grid-gallery": "^1.0.1",
     "react-native-awesome-gallery": "^0.4.2",
+    "tailwindcss": "^3.4.13",
     "typescript": "^5.5.3"
   },
   "devDependencies": {
