--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-grid-gallery": "^1.0.1",
     "react-native-awesome-gallery": "^0.4.2",
     "tailwindcss": "^3.4.13",
-    "typescript": "^5.5.3"
+    "typescript": "^5.5.3",
+    "vite-plugin-image-optimizer": "^1.1.8"
   },
   "devDependencies": {
     "@types/photoswipe": "^4.1.6",
