--- a/.github/workflows/deployment_dev_az.yml
+++ b/.github/workflows/deployment_dev_az.yml
@@ -16,19 +16,19 @@ jobs:
       - name: Log in to Azure Container Registry
         uses: azure/docker-login@v2
         with:
-          login-server: ${{ secrets.AZURE_ACR }}.azurecr.io
+          login-server: fxsrEckwerkstuttgartReg.azurecr.io
           username: ${{ secrets.AZURE_ACR_USERNAME }}
           password: ${{ secrets.AZURE_ACR_PASSWORD }}
 
       - name: Build Docker image
         run: |
-          docker build -t ${{ secrets.AZURE_ACR }}.azurecr.io/${{ github.event.repository.name }}:${{ github.sha }} .
+          docker build -t fxsrEckwerkstuttgartReg.azurecr.io/${{ github.event.repository.name }}:${{ github.sha }} .
 
       - name: Push Docker image to Azure Container Registry
         run: |
-          docker push ${{ secrets.AZURE_ACR }}.azurecr.io/${{ github.event.repository.name }}:${{ github.sha }}
+          docker push fxsrEckwerkstuttgartReg.azurecr.io/${{ github.event.repository.name }}:${{ github.sha }}
 
       - name: Tag and push the 'latest' Docker image
         run: |
-          docker tag ${{ secrets.AZURE_ACR }}.azurecr.io/${{ github.event.repository.name }}:${{ github.sha }} ${{ secrets.AZURE_ACR }}.azurecr.io/${{ github.event.repository.name }}:latest
-          docker push ${{ secrets.AZURE_ACR }}.azurecr.io/${{ github.event.repository.name }}:latest
+          docker tag fxsrEckwerkstuttgartReg.azurecr.io/${{ github.event.repository.name }}:${{ github.sha }} fxsrEckwerkstuttgartReg.azurecr.io/${{ github.event.repository.name }}:latest
+          docker push fxsrEckwerkstuttgartReg.azurecr.io/${{ github.event.repository.name }}:latest
