--- a/.github/workflows/deployment_dev_az.yml
+++ b/.github/workflows/deployment_dev_az.yml
@@ -22,13 +22,13 @@ jobs:
 
       - name: Build Docker image
         run: |
-          docker build -t fxsrEckwerkstuttgartReg.azurecr.io/${{ github.event.repository.name }}:${{ github.sha }} .
+          docker build -t fxsrEckwerkstuttgartReg.azurecr.io/${{ github.event.repository.name }}: .
 
       - name: Push Docker image to Azure Container Registry
         run: |
-          docker push fxsrEckwerkstuttgartReg.azurecr.io/${{ github.event.repository.name }}:${{ github.sha }}
+          docker push fxsrEckwerkstuttgartReg.azurecr.io/${{ github.event.repository.name }}:latest
 
       - name: Tag and push the 'latest' Docker image
         run: |
-          docker tag fxsrEckwerkstuttgartReg.azurecr.io/${{ github.event.repository.name }}:${{ github.sha }} fxsrEckwerkstuttgartReg.azurecr.io/${{ github.event.repository.name }}:latest
+          docker tag fxsrEckwerkstuttgartReg.azurecr.io/${{ github.event.repository.name }}:latest fxsrEckwerkstuttgartReg.azurecr.io/${{ github.event.repository.name }}:latest
           docker push fxsrEckwerkstuttgartReg.azurecr.io/${{ github.event.repository.name }}:latest
