--- a/.github/workflows/deployment_dev_az.yml
+++ b/.github/workflows/deployment_dev_az.yml
@@ -13,12 +13,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Log in to Azure Container Registry
-        uses: azure/docker-login@v2
+      - name: Login to Azure
+        uses: azure/login@v2
         with:
-          login-server: fxsrEckwerkstuttgartReg.azurecr.io
-          username: ${{ secrets.AZURE_ACR_USERNAME }}
-          password: ${{ secrets.AZURE_ACR_PASSWORD }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_30E71780CC3E416DAA1BB0D737C603DC }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_46DFB070BCEC4D858D6239F9149DE101 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_42A702832DA64A3C8909178131169572 }}
 
       - name: Build Docker image
         run: |
@@ -26,4 +26,4 @@ jobs:
 
       - name: Push Docker image to Azure Container Registry
         run: |
-          docker push fxsreckwerkstuttgartreg.azurecr.io/eckwerkstuttgart/eckwerkstuttgart:latest
+          docker push fxsre ggckwerkstuttgartreg.azurecr.io/eckwerkstuttgart/eckwrkstuttgart:latest
