--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fontsource-variable/material-symbols-outlined": "^5.0.33",
     "@fontsource-variable/montserrat": "^5.0.19",
     "@fontsource-variable/source-code-pro": "^5.0.19",
+    "@fontsource-variable/source-sans-3": "^5.1.0",
     "@fontsource/roboto": "^5.0.13",
     "@fontsource/source-sans-pro": "^5.0.8",
     "@iconify-json/line-md": "^1.1.38",
