--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^18.3.1",
     "react-grid-gallery": "^1.0.1",
     "react-native-awesome-gallery": "^0.4.2",
+    "sharp": "^0.33.5",
     "tailwindcss": "^3.4.13",
     "typescript": "^5.5.3",
     "vite-plugin-image-optimizer": "^1.1.8"
