--- a/package.json
+++ b/package.json
@@ -45,9 +45,10 @@
     "autoprefixer": "^10.4.19",
     "eslint": "^9.6.0",
     "eslint-plugin-astro": "^1.2.2",
-    "prettier": "^3.3.2",
-    "prettier-plugin-astro": "^0.14.0",
+    "prettier": "^3.4.2",
+    "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-packagejson": "^2.5.0",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "sass": "^1.77.6"
   },
   "volta": {
