--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,9 @@
         ],
         "extensions": [".js", ".jsx", ".ts", ".tsx", ".astro"]
       }
+    },
+    "parserOptions": {
+      "sourceType": "module"
     }
   }
 }
