--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "astro-robots-txt": "^1.0.0",
     "astro-seo": "^0.8.4",
     "photoswipe": "^5.4.4",
+    "sharp": "^0.33.5",
     "tailwindcss": "^3.4.13",
     "typescript": "^5.5.3",
     "vite-plugin-image-optimizer": "^1.1.8"
