--- a/.github/workflows/deployment_prod.yml
+++ b/.github/workflows/deployment_prod.yml
@@ -18,12 +18,10 @@ jobs:
     steps:
       - name: Checkout your repository using git
         uses: actions/checkout@v4
-      - name: Install, build, and upload your site
-        uses: withastro/action@v2
-        with:
-          node-version: 23.9.0
-          package-manager: pnpm@latest
-          build-script: build-prod
+      - name: Install dependencies
+        run: pnpm install
+      - name: Build the site
+        run: pnpm run build-prod
 
   deploy:
     needs: build
